--- a/src/Microled.Pix.Api/appsettings.Development.json
+++ b/src/Microled.Pix.Api/appsettings.Development.json
@@ -10,13 +10,18 @@
     "client_secret": "4d39dd5d-2a74-4f32-921c-5ca8dee8f17e"
   },
   "CredenciaisBradesco": {
-    "client_id": "a8cc4563-fe9f-3db6-95a3-619ebf9503de",
-    "client_secret": "4d39dd5d-2a74-4f32-921c-5ca8dee8f17e"
+    "client_id": "f9e81beb-de3b-4ba7-809d-f8ef1c756cd1",
+    "client_secret": "440caa29-b34f-45a9-b20d-4d78dfe1473d"
   },
-  "UrlsPix": {
+  "UrlsPixItau": {
     "devportal_url": "https://devportal.itau.com.br/",
     "sandbox_url": "https://devportal.itau.com.br/sandboxapi",
     "authentication": "api/jwt"
+  },
+  "UrlsPixBradesco": {
+    "homolog_url": "https://devportal.itau.com.br/",
+    "prod_url": "https://devportal.itau.com.br/sandboxapi",
+    "authentication": "https://qrpix-h.bradesco.com.br/oauth/token"
   }
 }
   
