--- a/src/Microled.Pix.Application/Microled.Pix.Application.csproj
+++ b/src/Microled.Pix.Application/Microled.Pix.Application.csproj
@@ -2,6 +2,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+    <PackageReference Include="ZXing.Net" Version="0.16.9" />
   </ItemGroup>
 
   <ItemGroup>
