certificados itau e bradesco

--- a/src/Microled.Pix.Api/appsettings.Development.json
+++ b/src/Microled.Pix.Api/appsettings.Development.json
@@ -11,7 +11,8 @@
   },
   "CredenciaisBradesco": {
     "client_id": "f9e81beb-de3b-4ba7-809d-f8ef1c756cd1",
-    "client_secret": "440caa29-b34f-45a9-b20d-4d78dfe1473d"
+    "client_secret": "440caa29-b34f-45a9-b20d-4d78dfe1473d",
+    "chave-pix": "4581f4b7-957f-4aba-9ae8-c1c174e9452c"
   },
   "UrlsPixItau": {
     "devportal_url": "https://devportal.itau.com.br/",
@@ -19,8 +20,8 @@
     "authentication": "api/jwt"
   },
   "UrlsPixBradesco": {
-    "homolog_url": "https://devportal.itau.com.br/",
-    "prod_url": "https://devportal.itau.com.br/sandboxapi",
+    "homolog_url": "https://qrpix-h.bradesco.com.br",
+    "prod_url": "https://qrpix-h.bradesco.com.br",
     "authentication": "https://qrpix-h.bradesco.com.br/oauth/token"
   }
 }
