--- a/src/Microled.Pix.Api/appsettings.Development.json
+++ b/src/Microled.Pix.Api/appsettings.Development.json
@@ -6,8 +6,11 @@
     }
   },
   "CredenciaisItau": {
-    "client_id": "a8cc4563-fe9f-3db6-95a3-619ebf9503de",
-    "client_secret": "4d39dd5d-2a74-4f32-921c-5ca8dee8f17e"
+    "client_id": "2f4c117a-629d-47c5-83bb-3fa3ad8ffe7f",
+    "client_secret": "bfb4cff0-30c6-4be6-9a5f-a583db0bc4c4",
+    "chave_pix": "58188756000196",
+    "certificado": "C:\\Users\\kleid\\OneDrive\\Documents\\ITAU_CALL\\RetornoCertificado\\CRT\\CERTIFICADO_PFX.pfx",
+    "password":  "index@12"
   },
   "CredenciaisBradesco": {
     "client_id": "f9e81beb-de3b-4ba7-809d-f8ef1c756cd1",
@@ -16,13 +19,18 @@
   },
   "UrlsPixItau": {
     "devportal_url": "https://devportal.itau.com.br/",
-    "sandbox_url": "https://devportal.itau.com.br/sandboxapi",
-    "authentication": "api/jwt"
+    "authentication": "https://sts.itau.com.br/api/oauth/token",
+    "qrcode": "https://secure.api.itau",
+    "qrcode_pix": "https://secure.api.itau/pix_recebimentos/v2/cobv/"
   },
   "UrlsPixBradesco": {
     "homolog_url": "https://qrpix-h.bradesco.com.br",
     "prod_url": "https://qrpix-h.bradesco.com.br",
     "authentication": "https://qrpix-h.bradesco.com.br/oauth/token"
+  },
+  "UrlsMicroled": {
+    "baixa": "http://microled.app.br/",
+    "band": "http://api.pixdev.band-deicmar.com.br/"
   }
 }
   
