--- a/src/Microled.Pix.Api/appsettings.json
+++ b/src/Microled.Pix.Api/appsettings.json
@@ -5,5 +5,35 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "CredenciaisItau": {
+    "client_id": "2f4c117a-629d-47c5-83bb-3fa3ad8ffe7f",
+    "client_secret": "bfb4cff0-30c6-4be6-9a5f-a583db0bc4c4",
+    "chave_pix": "58188756000196",
+    "certificado": "C:\\dev\\microled.api.pix\\src\\certificado\\CERTIFICADO_PFX.pfx",
+    "password": "aW5kZXhAMTI=",
+    "certificado_crt": "C:\\dev\\microled.api.pix\\src\\certificado\\CERTIFICADO_RETORNO.crt",
+    "key": "C:\\dev\\microled.api.pix\\src\\certificado\\ARQUIVO_CHAVE_PRIVADA.key"
+  },
+  "CredenciaisBradesco": {
+    "client_id": "f9e81beb-de3b-4ba7-809d-f8ef1c756cd1",
+    "client_secret": "440caa29-b34f-45a9-b20d-4d78dfe1473d",
+    "chave-pix": "4581f4b7-957f-4aba-9ae8-c1c174e9452c"
+  },
+  "UrlsPixItau": {
+    "devportal_url": "https://devportal.itau.com.br/",
+    "authentication": "https://sts.itau.com.br/api/oauth/token",
+    "qrcode": "https://secure.api.itau",
+    "qrcode_pix": "https://secure.api.itau/pix_recebimentos/v2/cobv/"
+  },
+  "UrlsPixBradesco": {
+    "homolog_url": "https://qrpix-h.bradesco.com.br",
+    "prod_url": "https://qrpix-h.bradesco.com.br",
+    "authentication": "https://qrpix-h.bradesco.com.br/oauth/token"
+  },
+  "UrlsMicroled": {
+    "baixa": "http://microled.app.br/",
+    "band": "http://api.pixdev.band-deicmar.com.br/"
+  },
   "AllowedHosts": "*"
 }
+  
