fix(Consulta): ajuste no endpoint de consulta e troca da biblioteca que gera o base64

--- a/src/Microled.Pix.Api/appsettings.Development.json
+++ b/src/Microled.Pix.Api/appsettings.Development.json
@@ -9,7 +9,7 @@
     "client_id": "2f4c117a-629d-47c5-83bb-3fa3ad8ffe7f",
     "client_secret": "bfb4cff0-30c6-4be6-9a5f-a583db0bc4c4",
     "chave_pix": "58188756000196",
-    "certificado": "C:\\dev\\microled.api.pix\\src\\certificado\\CERTIFICADO_PFX.pfx",
+    "certificado": "/Users/macbookpro/Documents/sync/CERTIFICADO_PFX.pfx",
     "password": "index@12",
     "certificado_crt": "C:\\dev\\microled.api.pix\\src\\certificado\\CERTIFICADO_RETORNO.crt",
     "key": "C:\\dev\\microled.api.pix\\src\\certificado\\ARQUIVO_CHAVE_PRIVADA.key"
@@ -24,7 +24,8 @@
     "authentication": "https://sts.itau.com.br/api/oauth/token",
     "qrcode": "https://secure.api.itau",
     "qrcode_pix": "https://secure.api.itau/pix_recebimentos/v2/cobv/",
-    "lista_pix": "https://secure.api.itau/pix_recebimentos/v2/cobv"
+    "lista_pix": "https://secure.api.itau/pix_recebimentos/v2/cobv",
+    "consulta_pix": "https://secure.api.itau/pix_recebimentos/v2/cobv"
   },
   "UrlsPixBradesco": {
     "homolog_url": "https://qrpix-h.bradesco.com.br",
