fix(Cancelamento): ajustes no enpoint do cancelamento

--- a/src/Microled.Pix.Api/appsettings.Development.json
+++ b/src/Microled.Pix.Api/appsettings.Development.json
@@ -25,7 +25,8 @@
     "qrcode": "https://secure.api.itau",
     "qrcode_pix": "https://secure.api.itau/pix_recebimentos/v2/cobv/",
     "lista_pix": "https://secure.api.itau/pix_recebimentos/v2/cobv",
-    "consulta_pix": "https://secure.api.itau/pix_recebimentos/v2/cobv"
+    "consulta_pix": "https://secure.api.itau/pix_recebimentos/v2/cobv",
+    "cancela_pix": "https://secure.api.itau/pix_recebimentos/v2/cobv"
   },
   "UrlsPixBradesco": {
     "homolog_url": "https://qrpix-h.bradesco.com.br",
